--- a/ClasificadorGalaxias.ipynb
+++ b/ClasificadorGalaxias.ipynb
@@ -2,35 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1f6027b5",
-   "metadata": {},
-   "source": [
-    "https://arxiv.org/pdf/1711.06125"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1cf09890",
-   "metadata": {},
-   "source": [
-    "https://jayspeidell.github.io/portfolio/project07-galazy-zoo/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "dd07ec2d",
    "metadata": {},
    "source": [
-    "https://arxiv.org/pdf/1711.06125\n",
     "\n",
     "https://towardsdatascience.com/galaxy-zoo-classification-with-keras-219184aff581/\n",
     "\n",
-    "https://www.kaggle.com/competitions/galaxy-zoo-the-galaxy-challenge/overview\n",
     "\n",
-    "[alendar.google.com/calendar/u/0/r?tab=wc&pli=1](https://github.com/soliao/Galaxy-Zoo-Classification/blob/main/gz2_Resnet50_Pytorch.ipynb)\n",
+    "https://github.com/soliao/Galaxy-Zoo-Classification/blob/main/gz2_Resnet50_Pytorch.ipynb\n",
     "\n",
     "\n",
-    "https://data.galaxyzoo.org/\n",
     "\n",
     "https://jayspeidell.github.io/portfolio/project07-galazy-zoo/\n"
    ]
@@ -1218,7 +1199,7 @@
    "id": "942ef201",
    "metadata": {},
    "source": [
-    "Desde la plataforma de Kaggle y la competencia [Galaxy Zoo: The Galaxy Challenge](https://www.kaggle.com/competitions/galaxy-zoo-the-galaxy-challenge/overview), desc_esargamos el conjunto de datos de imágenes de galaxias y sus etiquetas correspondientes. \n",
+    "Desde la plataforma de Kaggle y la competencia [Galaxy Zoo: The Galaxy Challenge](https://www.kaggle.com/competitions/galaxy-zoo-the-galaxy-challenge/overview), descargamos el conjunto de datos de imágenes de galaxias y sus etiquetas correspondientes. Estos datos son solo un subconjunto del conjunto de datos completo disponible en [data.galaxyzoo.org](https://data.galaxyzoo.org/), adaptado para la competencia de Kaggle. Este es un proyecto de ciencia ciudadana donde voluntarios clasifican imágenes de galaxias con 37 etiquetas diferentes, y los datos recopilados se utilizan para entrenar modelos de aprendizaje automático.\n",
     "\n",
     "Para desarrollar el modelo de *Deep Learning*, utilizamos [`PyTorch`](https://pytorch.org/), una de las dos bibliotecas más populares para desarollar los modelos de aprendizaje profundo."
    ]
@@ -1605,7 +1586,7 @@
    "id": "687e2b0c",
    "metadata": {},
    "source": [
-    "Utilizaremos el modelo de `TinyVGG`. Este modelo fue desarrollado por la Universidad de Oxford en 2014 para el tratamiento de imagenes."
+    "Utilizaremos el modelo de `TinyVGG`. Este modelo fue desarrollado por la Universidad de Oxford en 2015 para el tratamiento de imagenes ([Simonyan & Zisserman, 2015](https://ui.adsabs.harvard.edu/abs/2014arXiv1409.1556S/abstract))."
    ]
   },
   {
