--- a/ClasificadorGalaxias.ipynb
+++ b/ClasificadorGalaxias.ipynb
@@ -2,18 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dd07ec2d",
+   "id": "6f6f9bb8",
    "metadata": {},
    "source": [
+    "<div style=\"max-width:300px; float: left; margin-right: 1em\">\n",
     "\n",
-    "https://towardsdatascience.com/galaxy-zoo-classification-with-keras-219184aff581/\n",
+    "![](figures/logos/IDIA.jpg)\n",
     "\n",
+    "</div>\n",
+    "<span style=\"color: purple;\">Iniciativa de Datos e Inteligencia Artificial</span> <br>\n",
+    "Facultad de Ciencias Físicas y Matemáticas <br>\n",
+    "Universidad de Chile <br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<strong>Author: Steve Jurado</strong> <br>\n",
+    "Noviembre 2025 <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fa5052a",
+   "metadata": {},
+   "source": [
+    "# Clasificador de Galaxias\n",
     "\n",
-    "https://github.com/soliao/Galaxy-Zoo-Classification/blob/main/gz2_Resnet50_Pytorch.ipynb\n",
-    "\n",
-    "\n",
-    "\n",
-    "https://jayspeidell.github.io/portfolio/project07-galazy-zoo/\n"
+    "## Objetivos \n",
+    "- Aprender a usar diferentes herramientas de Aprendizaje de Maquina para afrontar problemas en el ambito de la Astronomía. \n",
+    "- Desarrollar un clasificador de imagenes de galaxías usando un modelo sencillo de Arbol de Decisión (Decision Tree).\n",
+    "- Entrenar un modelo sencillo de Deep Learning para la regresión de imágenes de galaxias usando una Red Neuronal Convolucional (CNN), usando la arquitecture TinyVGG ([Simonyan & Zisserman, 2015](https://ui.adsabs.harvard.edu/abs/2014arXiv1409.1556S/abstract)).\n"
    ]
   },
   {
@@ -1586,7 +1603,11 @@
    "id": "687e2b0c",
    "metadata": {},
    "source": [
-    "Utilizaremos el modelo de `TinyVGG`. Este modelo fue desarrollado por la Universidad de Oxford en 2015 para el tratamiento de imagenes ([Simonyan & Zisserman, 2015](https://ui.adsabs.harvard.edu/abs/2014arXiv1409.1556S/abstract))."
+    "Utilizaremos el modelo de `TinyVGG`. Este modelo fue desarrollado por la Universidad de Oxford en 2015 para el tratamiento de imagenes ([Simonyan & Zisserman, 2015](https://ui.adsabs.harvard.edu/abs/2014arXiv1409.1556S/abstract)).\n",
+    "\n",
+    "<center>\n",
+    "    <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqOvIOZUGpHZ7B8pH0JJhMPRBKuCbVgFBkOA&s' style='height: 200px;'>\n",
+    "</center>"
    ]
   },
   {
@@ -1931,6 +1952,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6e868f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c5ce608",
+   "metadata": {},
+   "source": [
+    "\n",
+    "https://towardsdatascience.com/galaxy-zoo-classification-with-keras-219184aff581/\n",
+    "\n",
+    "\n",
+    "https://github.com/soliao/Galaxy-Zoo-Classification/blob/main/gz2_Resnet50_Pytorch.ipynb\n",
+    "\n",
+    "\n",
+    "\n",
+    "https://jayspeidell.github.io/portfolio/project07-galazy-zoo/\n"
+   ]
   }
  ],
  "metadata": {
